cmake_minimum_required(VERSION 3.22)
project(c__work_tech)

set(CMAKE_CXX_STANDARD 14)

add_executable(PrintDigits
        PrintDigits.cpp)
add_executable(practice practice.cpp)
add_executable(DivisibleBySix DivisibleBySix.cpp)
add_executable(TemperatureConversion TemperatureConversion.cpp)
add_executable(7up7down 7up7down.cpp)
add_executable(Triangle Triangle.cpp)
add_executable(HappyBirthday HappyBirthday.cpp)
add_executable(1characterLine 1characterLine.cpp)
add_executable(reverse reverse.cpp)
add_executable(2CharacterLine 2CharacterLine.cpp)
add_executable(palindrome palindrome.cpp)
add_executable(Table Table.cpp)
add_executable(Star Star.cpp)
add_executable(star2 star2.cpp)
add_executable(Vowels Vowels.cpp)
add_executable(SquareSum SquareSum.cpp)
add_executable(MidElement MidElement.cpp)
add_executable(Leader Leader.cpp)
add_executable(wordinsentence wordinsentence.cpp)
add_executable(SquareNum SquareNum.cpp)
add_executable(Pastries Pastries.cpp)
add_executable(NotDivisible NotDivisible.cpp)
add_executable(DigitSum DigitSum.cpp)
add_executable(Sort Sort.cpp)
add_executable(FileHandling FileHandling.cpp)
add_executable(Student Student.cpp)
add_executable(AjacentZeroes AjacentZeroes.cpp)
add_executable(Percentage Percentage.cpp)
add_executable(Factorial Factorial.cpp)
add_executable(ReverseArr ReverseArr.cpp)
add_executable(StudentRecord StudentRecord.cpp)
add_executable(BaseSalary BaseSalary.cpp)
add_executable(Fibonacci Fibonacci.cpp)
add_executable(UpperCase UpperCase.cpp)
add_executable(ToggleCase ToggleCase.cpp)
add_executable(Sorted Sorted.cpp)
add_executable(Swap Swap.cpp)
add_executable(Guess Guess.cpp)
add_executable(weather weather.cpp)
add_executable(HighFever HighFever.cpp)