cmake_minimum_required(VERSION 3.22)
project(coding_ninja)

set(CMAKE_CXX_STANDARD 11)

add_executable(coding_ninja main.cpp)
add_executable(NinjaCompetition NinjaCompetition.cpp)
add_executable(SumOfEvenOdd SumOfEvenOdd.cpp)
add_executable(NthRoot NthRoot.cpp)
add_executable(SquareRoot SquareRoot.cpp)
